<resources>
    <string name="app_name">Survey</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="newSurvey">New Survey</string>
    <string name="Agree">Fully Agree</string>
    <string name="Disagree">Completely Wrong</string>
    <string name="Next">Next</string>
    <string name="Previous">Back</string>
    <string name="Thx">Thx for participation</string>
    <string name="Finish">Finish</string>
    <string name="New">New</string>
    <string name="Create">Create</string>
    <string name="NameIt">Name your survey</string>
    <string name="Cancel">Cancel</string>
    <string name="About">About</string>
    <string name="Close">Close</string>
    <string name="Share">Share</string>
    <string name="GiveID">Participant ID</string>
    <string name="Start">Start</string>
</resources>
