<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/question_et"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:textStyle="italic"/>

    <Button
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:text="@string/Next"
        android:id="@+id/next_bt"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:text="@string/Previous"
        android:id="@+id/previous_bt"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:text="@string/Create"
        android:id="@+id/create_bt"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/progress_tv"
        android:layout_below="@+id/question_et"
        android:layout_centerHorizontal="true" />
</RelativeLayout>